2003-06-17  Matti Aarnio  <mea@zmailer.org>

	* transports/mailbox/mailbox.c, transports/libta/mimeheaders.c,
	  include/ta.h, transports/smtp/smtp.c:
	    Track a bit more of allocated memory chunks, and provide
	    explicite free() routines for them. (Hunting originally
	    memory leaks in  mailbox.)

	* transports/mailbox/mailbox.c, man/mailbox.8.in:
	    Added option "-F edquot"  to instantly fatalify quota-exceed
	    condition of the baseline code.

	* libc/getaddrinfo-test.c:
	    Another test-harness..

2003-06-09  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Mark version 2.99.56-pre7

	* include/libz.h, include/shmmib.h, lib/fdstatfs-test.c,
	  lib/fdstatfs.c, lib/zshmmibattach.c, router/daemonsub.c,
	  scheduler/mailq.inc, scheduler/scheduler.c, smtpserver/smtpcmds.c,
	  smtpserver/smtpdata.c, smtpserver/smtpserver.h:
	    - When wanting to add used spool space gauges into
	      SHM segment header, realized that it does not have
	      32 spare uint variables..  Oops..  Had to change
	      block layout -> new MAGIC, full rearrancement of all
	      so far accumulated small counters, etc..
	    - renamed  fd_statfs()  into  free_fd_statfs(), and
	      added a cousin for it:  used_fd_statfs().  Both return
	      space in kilobytes (e.g. can describe up to 2 TB...)
	    - Removed  RT.StoredRecipients  gauge, which the router
	      can't maintain anyway.

	* lib/fdstatfs.c, lib/zshmmibattach.c, scheduler/scheduler.c,
	  smtpserver/smtpserver.h, smtpserver/smtpcmds.c,
	  smtpserver/smtpdata.c, smtpserver/smtpserver.c:
	    Changed the  fd_statfs()  to report KILOBYTES of free space,
	    while still returning it via mere 'long' variable in all
	    systems (e.g. may have limit of LONG_MAX a.k.a. around 2 G,
	    which in kilobytes means: around 2 Terabytes ..)
	    Also re-juggled codes using this free-space data.

	* man/Makefile.in, man/mailq-m-generate.pl, scheduler/mailq.inc,
	  man/man-to-html.sh, man/mailq.1.in: